Added packages to fit ODK 2.0 coding style

--- a/scan_app/src/main/res/values-pt/strings.xml
+++ b/scan_app/src/main/res/values-pt/strings.xml
@@ -25,7 +25,7 @@
     <string name="display_data">Display Data</string>
     <string name="main_menu">Main Menu</string>
 
-    <!-- Instructions -->
+    <!-- InstructionsActivity -->
     <string name="Instructions1">The BubbleBot appplication is designed to convert paper bubble forms into a digital format using computer vision.  </string>
     <string name="Instructions2">To scan a form, click the "Scan New Form" button on the main page.  This will open up a camera.  A rectangle will
 							be overlaid on top of the viewfinder.  In order to capture your paper form correctly, orient the phone so that your
