--- a/scan_app/src/main/res/values/strings.xml
+++ b/scan_app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 <string name="InstructionsButton">Instructions</string>
 <string name="SettingsButton">Settings</string>
 
-<!-- DisplayProcessedForm -->
+<!-- DisplayProcessedFormActivity -->
 <string name="next_page">Scan Next Page</string>
 <string name="save">Save</string>
 <string name="transcribe">Transcribe</string>
