--- a/scan_app/src/main/res/values/strings.xml
+++ b/scan_app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="Health_Center">Health Center</string>
     <string name="the_current_health_center_is">The current health center is:</string>
     <string name="scan_new_form">Scan New Form&lt;br/>&lt;i>%s&lt;/i></string>
-    <string name="ProcessImageButton">Process Existing Image&lt;br/>&lt;i>%s&lt;/i></string>
+    <string name="ProcessImageButton">Process Saved Image</string>
+    <string name="ProcessFolderButton">Process Image Folder</string>
     <string name="ViewFormsButton">View Scanned Forms</string>
     <string name="InstructionsButton">Instructions</string>
     <string name="SettingsButton">Settings</string>
@@ -37,6 +38,7 @@
     <string name="error_acquire_bad_return">Failed to capture image.</string>
     <string name="error_file_creation">Could not save photo.</string>
     <string name="error_finding_file">Could not find photo.</string>
+    <string name="error_finding_dir">Could not find folder.</string>
 
     <!-- DisplayProcessedFormActivity -->
     <string name="next_page">Scan Next Page</string>
