Updated menu for new image acquisition options

--- a/scan_app/src/main/res/values/strings.xml
+++ b/scan_app/src/main/res/values/strings.xml
@@ -27,8 +27,8 @@
     <string name="no_template">Please select a template to use from the settings menu before
         scanning.</string>
     <string name="scan_new_form">Scan New Form</string>
-    <string name="process_image_button">Process Saved Image</string>
-    <string name="process_folder_button">Process Image Folder</string>
+    <string name="process_image">Process Saved Image</string>
+    <string name="process_folder">Process Image Folder</string>
     <string name="view_forms_button">View Scanned Forms</string>
     <string name="instructions_button">Instructions</string>
     <string name="settings_button">Settings</string>
