--- a/scan_app/src/main/res/values/strings.xml
+++ b/scan_app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ODK Scan</string>
+    <string name="app_name">ODK-X Scan</string>
 
     <string name="app_description">Scan and process bubble forms</string>
     <string name="bubble_process_activity">Processing Scanned Form</string>
